unpackaged/main/default/objects/Account/fields/Demo_Text2__c.field-meta.xml
<CustomField>
    <fullName>Demo_Text2__c</fullName>
    <description>Demo Gearset Dev Env2</description>
    <label>Demo_Text2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>