unpackaged/main/default/objects/Account/fields/Lyndsey_s_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Lyndsey_s_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lyndsey&#39;s checkbox</description>
    <label>Lyndsey&#39;s Checkbox</label>
    <type>Checkbox</type>
</CustomField>